[package]
name = "diamond"
version = "0.1.0"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
geo-types = "0.4"
geo-booleanop = { git="https://github.com/21re/rust-geo-booleanop" }
geo = "0.12"

[dev-dependencies]
plotters = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
moz-cheddar = "0.4.0"