[package]
name = "diamond"
version = "0.1.0"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
geo-types = "0.4"
geo-booleanop = { git="https://github.com/21re/rust-geo-booleanop" }
geo = "0.12"
ndarray = { version = "0.13", features = ["rayon"] }
rayon = "1.3"

[dev-dependencies]
plotters = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.13"
