[package]
name = "diamond"
version = "0.1.0"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
geo-types = "0.6"
geo-booleanop = "0.3"
geo = { version = "0.14", features = ["use-serde"] }
itertools = "0.9"
mlua = { version = "0.8", features = ["luajit", "module"] }
ndarray = { version = "0.13", features = ["rayon"] }
ordered-float = "2.0"
pathfinding = "2.0"
rayon = "1.3"
spade = "1.8.2"

[dev-dependencies]
plotters = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
