[package]
name = "knob"
version = "0.1.0"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
midir = "0.7"
parking_lot = "0.11"
strum = { version = "0.20", features = ["derive"] }

[build-dependencies]
lua-ffi-gen = { path = "../lua-ffi-gen" }
